--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -24,11 +24,6 @@ tools:context=".ExerciseActivity">
 
             <TableRow>
 
-                <SearchView
-                    android:layout_width="360dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/table_outside2"/>
-
                 <ImageButton
                     android:id="@+id/imageButton1"
                     android:layout_width="50dp"
@@ -37,6 +32,12 @@ tools:context=".ExerciseActivity">
                     android:background="#60E8AD"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_baseline_menu_24" />
+
+
+                <android.widget.SearchView
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/table_outside2"/>
 
 
             </TableRow>
@@ -53,7 +54,7 @@ tools:context=".ExerciseActivity">
 
 
             <TableLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@drawable/table_outside"
@@ -82,7 +83,7 @@ tools:context=".ExerciseActivity">
                         android:textSize="35dp" />
 
                     <TextView
-                        android:layout_width="50dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="35dp"
                         android:text="조회"
