--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,6 @@
             tools:context=".MainActivity"
             android:orientation="vertical">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -35,28 +34,41 @@
                     android:background="#00000000"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_baseline_menu_24" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal">
 
                 <ImageButton
                     android:id="@+id/image_title"
-                    android:layout_width="200dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="45dp"
-                    android:layout_marginStart="55dp"
                     android:layout_marginTop="5dp"
                     android:adjustViewBounds="true"
                     android:background="#00000000"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/title_icon2" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="end">
 
                 <ImageButton
                     android:id="@+id/imageButton2"
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:layout_marginStart="55dp"
                     android:adjustViewBounds="true"
                     android:background="#00000000"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_baseline_person_24" />
             </LinearLayout>
+
+
 
             <LinearLayout
                 android:orientation="vertical"
@@ -152,13 +164,18 @@
                     android:background="#00000000"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end">
 
                 <ImageButton
                     android:id="@+id/imageButton_right"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="170dp"
-                    android:layout_marginStart="310dp"
                     android:adjustViewBounds="true"
                     android:background="#00000000"
                     android:scaleType="fitCenter"
@@ -171,15 +188,15 @@
     </ScrollView>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom|right">
 
         <ImageButton
             android:id="@+id/btnAdd"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginStart="330dp"
-            android:layout_marginTop="550dp"
+            android:layout_marginBottom="20dp"
             android:adjustViewBounds="true"
             android:background="#00000000"
             android:scaleType="fitCenter"
