--- a/app/src/main/res/layout/activity_view_study_modified.xml
+++ b/app/src/main/res/layout/activity_view_study_modified.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Only_ViewExercise">
+    tools:context=".ViewStudy">
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -52,7 +51,7 @@
 
                     <TextView
                         android:id="@+id/user"
-                        android:layout_marginLeft="250dp"
+                        android:layout_marginLeft="215dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text='writer'
@@ -66,7 +65,15 @@
                         android:layout_marginLeft="5dp"
                         android:text='2022년 00월 00일 00:00'
                         android:fontFamily="@font/font3"
-                        android:textSize="16dp"/>
+                        android:textSize="15dp"/>
+                    <TextView
+                        android:id="@+id/modified"
+                        android:layout_marginLeft="3dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="(수정됨)"
+                        android:fontFamily="@font/font3"
+                        android:textSize="20dp"/>
 
                 </LinearLayout>
 
