--- a/app/src/main/res/layout/activity_view_study_user.xml
+++ b/app/src/main/res/layout/activity_view_study_user.xml
@@ -47,17 +47,37 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/user"
+                        android:layout_marginLeft="200dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text='writer'
+                        android:textSize="27dp"
+                        android:fontFamily="@font/font3"/>
+
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:fontFamily="@font/font3"
+                        android:text='2022년 00월 00일 00:00'
+                        android:textSize="16dp" />
+
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/Edit_btn"
                         android:layout_width="50dp"
                         android:layout_height="35dp"
-                        android:layout_marginLeft="350dp"
-                        android:layout_marginTop="5dp"
-                        android:text="수정"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="3dp"
+                        android:text="수정하기"
                         android:background="@drawable/round_button2"
                         android:fontFamily="@font/font3"
                         android:textSize="16dp">
                     </androidx.appcompat.widget.AppCompatButton>
+
                 </LinearLayout>
 
                 <LinearLayout
