--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -1,166 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context=".ExerciseActivity">
-
-<ScrollView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ExerciseActivity">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-        <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:stretchColumns="1">
-
-            <TableRow>
-
-                <SearchView
-                    android:layout_width="360dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/table_outside2"/>
-
-                <ImageButton
-                    android:id="@+id/imageButton1"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:adjustViewBounds="true"
-                    android:background="#60E8AD"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/ic_baseline_menu_24" />
-
-
-            </TableRow>
-        </TableLayout>
-
-        <FrameLayout
-            android:layout_marginTop="60dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/table_outside"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
 
             <TableLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/table_outside"
-                android:stretchColumns="1"
-                >
+                android:stretchColumns="1">
 
                 <TableRow>
 
-                    <TextView
-                        android:layout_width="200dp"
+                    <android.widget.SearchView
+                        android:layout_width="360dp"
                         android:layout_height="wrap_content"
-                        android:layout_span="1"
-                        android:background="@drawable/table_inside"
-                        android:fontFamily="@font/font3"
-                        android:gravity="center"
-                        android:text="제목"
-                        android:textSize="35dp" />
+                        android:background="@drawable/table_outside2"/>
 
-                    <TextView
+                    <ImageButton
+                        android:id="@+id/imageButton1"
                         android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/table_inside"
-                        android:fontFamily="@font/font3"
-                        android:gravity="center"
-                        android:text="글쓴이"
-                        android:textSize="35dp" />
-
-                    <TextView
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:textSize="35dp"
-                        android:text="조회"
-                        android:gravity="center"
-                        android:fontFamily="@font/font3"
-                        android:background="@drawable/table_inside"
-                        android:layout_span="1"/>
-                </TableRow>
-
-                <TableRow>
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/blank1"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:layout_span="1"
-                        android:background="@drawable/table_inside2"
-                        android:fontFamily="@font/font3"
-                        android:gravity="center"
-                        android:textSize="20dp"
-                        />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/blank2"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:layout_span="1"
-                        android:background="@drawable/table_inside2"
-                        android:fontFamily="@font/font3"
-                        android:gravity="center"
-                        android:textSize="20dp"
-                        />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/blank3"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:layout_span="1"
-                        android:background="@drawable/table_inside2"
-                        android:fontFamily="@font/font3"
-                        android:gravity="center"
-                        android:textSize="20dp"
-                        />
+                        android:layout_height="50dp"
+                        android:adjustViewBounds="true"
+                        android:background="#60E8AD"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/ic_baseline_menu_24" />
 
 
                 </TableRow>
-
             </TableLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/table_outside"
+                android:orientation="vertical">
 
 
-        </FrameLayout>
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/table_outside"
+                    android:stretchColumns="1">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                    <TableRow>
+
+                        <TextView
+                            android:layout_width="250dp"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/table_inside"
+                            android:fontFamily="@font/font3"
+                            android:gravity="center"
+                            android:text="제목"
+                            android:textSize="35dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/table_inside"
+                            android:fontFamily="@font/font3"
+                            android:gravity="center"
+                            android:text="작성자"
+                            android:textSize="30dp" />
+
+                        <TextView
+                            android:layout_width="80dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/table_inside"
+                            android:fontFamily="@font/font3"
+                            android:gravity="center"
+                            android:text="날짜"
+                            android:textSize="30dp" />
+
+                    </TableRow>
+
+                </TableLayout>
+
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageButton
-                    android:id="@+id/btnAdd"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginStart="330dp"
-                    android:layout_marginTop="560dp"
-                    android:adjustViewBounds="true"
-                    android:background="#00000000"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/ic_baseline_add_circle_24" />
-
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/table_inside2"
+                    android:fontFamily="@font/font3"
+                    android:textSize="20dp" />
+            </LinearLayout>
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical" android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/progressCircle"
+                    android:layout_marginVertical="20dp"
+                    android:layout_gravity="center"
+                    android:indeterminate="true" />
             </LinearLayout>
 
-        </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnAdd"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_marginStart="330dp"
+                        android:layout_marginTop="5dp"
+                        android:adjustViewBounds="true"
+                        android:background="#00000000"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/ic_baseline_add_circle_24" />
+
+                </LinearLayout>
+
+            </FrameLayout>
 
 
-    </LinearLayout>
+        </LinearLayout>
 
-</ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </FrameLayout>
