--- a/app/src/main/res/layout/activity_myplan.xml
+++ b/app/src/main/res/layout/activity_myplan.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MealActivity">
+    tools:context=".Study_activity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollview"
@@ -128,23 +128,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/btnAdd"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:layout_marginStart="330dp"
-                        android:layout_marginTop="5dp"
-                        android:adjustViewBounds="true"
-                        android:background="#00000000"
-                        android:scaleType="fitCenter"
-                        app:srcCompat="@drawable/ic_baseline_add_circle_24" />
-
-                </LinearLayout>
 
             </FrameLayout>
 
