--- a/app/src/main/res/layout/activity_view_exercise_user_modified.xml
+++ b/app/src/main/res/layout/activity_view_exercise_user_modified.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Only_ViewExercise">
+    tools:context=".ViewExercise_modified">
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -22,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/table_inside"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -40,7 +39,6 @@
                         android:textSize="45dp" />
 
                 </LinearLayout>
-
                 <View
                     android:layout_width="wrap_content"
                     android:layout_height="2dp"
@@ -52,7 +50,7 @@
 
                     <TextView
                         android:id="@+id/user"
-                        android:layout_marginLeft="250dp"
+                        android:layout_marginLeft="180dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text='writer'
@@ -66,7 +64,27 @@
                         android:layout_marginLeft="5dp"
                         android:text='2022년 00월 00일 00:00'
                         android:fontFamily="@font/font3"
-                        android:textSize="16dp"/>
+                        android:textSize="14dp"/>
+                    <TextView
+                        android:id="@+id/modified"
+                        android:layout_marginLeft="3dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="(수정됨)"
+                        android:fontFamily="@font/font3"
+                        android:textSize="15dp"/>
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/Edit_btn"
+                        android:layout_width="50dp"
+                        android:layout_height="35dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="3dp"
+                        android:text="수정하기"
+                        android:background="@drawable/round_button2"
+                        android:fontFamily="@font/font3"
+                        android:textSize="16dp">
+                    </androidx.appcompat.widget.AppCompatButton>
 
                 </LinearLayout>
 
@@ -86,7 +104,6 @@
 
 
                 </LinearLayout>
-
             </LinearLayout>
             <View
                 android:layout_width="wrap_content"
@@ -127,7 +144,6 @@
                 </androidx.appcompat.widget.AppCompatButton>
 
             </LinearLayout>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_comment"
                 android:layout_marginLeft="4dp"
